--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
         HOST_GID: $HOST_GID
         HOST_UID: $HOST_UID
     ports:
-      - 8000:80
+      - '8080:80'
     restart: always
     depends_on:
       - db
@@ -18,15 +18,15 @@ services:
     env_file:
       - .env
     volumes:
-      - ./app/public:/var/www/html
+      - ./app/public/:/var/www/html/
       - ./app/php/uploads.ini:/usr/local/etc/php/conf.d/uploads.ini
 
   db:
     image: mysql:5.7
     ports:
-      - 3309:3306
+      - '3307:3306'
     restart: always
     env_file:
       - .env
     volumes:
-      - ./db/data:/var/lib/mysql
+      - ./db/data/:/var/lib/mysql/
