--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,9 @@
 version: '3'
+
 services:
   app:
+    env_file:
+      - .env
     build:
       context: ./app
       args:
@@ -13,16 +16,17 @@ services:
     links:
       - db
     environment:
-      WORDPRESS_DB_HOST: db:3306
-    env_file:
-      - .env
+      WORDPRESS_DB_HOST: db
+      WORDPRESS_DB_USER: $MYSQL_USER
+      WORDPRESS_DB_PASSWORD: $MYSQL_PASSWORD
+      WORDPRESS_DB_NAME: $MYSQL_DATABASE
     volumes:
       - ./app/public/:/var/www/html/
       - ./app/php/uploads.ini:/usr/local/etc/php/conf.d/uploads.ini
 
   db:
-    image: mysql:5.7
     env_file:
       - .env
+    image: mysql:5.7
     volumes:
       - ./db/data/:/var/lib/mysql/
